--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
     "@nestjs/typeorm": "^5.2.2",
+    "class-transformer": "^0.1.10",
+    "class-validator": "^0.9.1",
     "dotenv": "^6.1.0",
     "joi": "^14.0.1",
     "nest-schedule": "^0.4.3",
