--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "test:mutate": "stryker run",
+    "typeorm": "ts-node ./node_modules/.bin/typeorm",
     "webpack": "webpack --config webpack.config.js"
   },
   "dependencies": {
