--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "class-validator": "^0.9.1",
     "dotenv": "^6.1.0",
     "joi": "^14.0.1",
+    "luxon": "^1.5.0",
     "nest-schedule": "^0.4.3",
     "pg": "^7.5.0",
     "reflect-metadata": "^0.1.12",
@@ -44,6 +45,7 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
     "@types/joi": "^13.6.1",
+    "@types/luxon": "^1.4.0",
     "@types/node": "^10.7.1",
     "@types/stompit": "^0.26.0",
     "@types/stompjs": "^2.3.4",
