--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "class-validator": "^0.9.1",
     "dotenv": "^6.1.0",
     "graphql": "^14.0.2",
+    "graphql-redis-subscriptions": "^2.0.0",
     "graphql-tools": "^4.0.3",
     "joi": "^14.0.1",
     "luxon": "^1.5.0",
@@ -48,6 +49,7 @@
     "@nestjs/testing": "^5.4.0",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
+    "@types/ioredis": "^4.0.3",
     "@types/jest": "^23.3.1",
     "@types/joi": "^14.0.0",
     "@types/luxon": "^1.4.0",
