--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "cross-env NODE_ENV=development nodemon",
     "start:debug": "cross-env NODE_ENV=development nodemon --config nodemon-debug.json",
-    "prestart:prod": "rimraf dist && tsc",
+    "prestart:prod": "tsc",
     "start:prod": "node dist/main.js",
     "start:hmr": "node dist/server",
     "lint": "tslint -p tsconfig.json -c tslint.json",
