--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,7 +12,8 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./src",
-    "lib": ["es6", "dom", "esnext.asynciterable"]
+    "lib": ["es6", "dom", "esnext.asynciterable"],
+    "skipLibCheck": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
