--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -66,12 +66,10 @@
     "nodemon": "^1.18.3",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
-    "stryker": "^0.35.1",
-    "stryker-api": "^0.24.1",
-    "stryker-baseline-reporter": "^1.0.3",
-    "stryker-html-reporter": "^0.18.1",
-    "stryker-jest-runner": "^1.2.4",
-    "stryker-typescript": "^0.18.1",
+    "@stryker-mutator/core": "^1.1.0",
+    "@stryker-mutator/html-reporter": "^1.1.0",
+    "@stryker-mutator/jest-runner": "^1.1.0",
+    "@stryker-mutator/typescript": "^1.1.0",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.0",
     "ts-loader": "^5.2.2",
