--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^6.0.1",
     "@nestjs/graphql": "^6.0.1",
     "@nestjs/typeorm": "^6.0.0",
+    "@types/node": "^12.6.8",
     "apollo-server-express": "^2.1.0",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
@@ -36,7 +37,9 @@
     "graphql": "^14.0.2",
     "graphql-redis-subscriptions": "^2.0.0",
     "graphql-tools": "^4.0.3",
+    "jest-cli": "^24.8.0",
     "joi": "^14.0.1",
+    "lerna": "^3.16.4",
     "luxon": "^1.5.0",
     "nest-schedule": "^0.4.3",
     "pg": "^7.5.0",
@@ -46,10 +49,14 @@
     "stompjs": "^2.3.3",
     "type-graphql": "^0.17.0",
     "typeorm": "^0.2.8",
-    "typescript": "^3.0.1"
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.1",
+    "@stryker-mutator/core": "^1.1.0",
+    "@stryker-mutator/html-reporter": "^1.1.0",
+    "@stryker-mutator/jest-runner": "^1.1.0",
+    "@stryker-mutator/typescript": "^1.1.0",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/ioredis": "^4.0.3",
@@ -66,10 +73,6 @@
     "nodemon": "^1.18.3",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
-    "@stryker-mutator/core": "^1.1.0",
-    "@stryker-mutator/html-reporter": "^1.1.0",
-    "@stryker-mutator/jest-runner": "^1.1.0",
-    "@stryker-mutator/typescript": "^1.1.0",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.0",
     "ts-loader": "^5.2.2",
